// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Environment expect to render 1`] = `
<Fragment>
  <Table
    aria-label="Environment"
    borders={true}
    cells={
      Array [
        "",
        "",
        "",
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "Licenses for ESXi Hypervisors (2 socket)",
          "",
          "1",
        ],
        Array [
          "VMware licenses (2 socket) to migrate to RH technologies",
          "Year1 (incremental)",
          "12",
        ],
        Array [
          "",
          "Year2 (incremental)",
          "123",
        ],
        Array [
          "",
          "Year3 (incremental)",
          "1,234",
        ],
        Array [
          "Year-over-year growth rate for new hypervisors",
          "",
          "5%",
        ],
      ]
    }
    variant="compact"
  >
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Fragment>
`;

exports[`Environment expect to render using null and undefined data 1`] = `
<Fragment>
  <Table
    aria-label="Environment"
    borders={true}
    cells={
      Array [
        "",
        "",
        "",
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "Licenses for ESXi Hypervisors (2 socket)",
          "",
          "Unknown",
        ],
        Array [
          "VMware licenses (2 socket) to migrate to RH technologies",
          "Year1 (incremental)",
          "Unknown",
        ],
        Array [
          "",
          "Year2 (incremental)",
          "Unknown",
        ],
        Array [
          "",
          "Year3 (incremental)",
          "Unknown",
        ],
        Array [
          "Year-over-year growth rate for new hypervisors",
          "",
          "Unknown",
        ],
      ]
    }
    variant="compact"
  >
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Fragment>
`;

exports[`Environment expect to render using null and undefined data 2`] = `
<Fragment>
  <Table
    aria-label="Environment"
    borders={true}
    cells={
      Array [
        "",
        "",
        "",
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "Licenses for ESXi Hypervisors (2 socket)",
          "",
          "Unknown",
        ],
        Array [
          "VMware licenses (2 socket) to migrate to RH technologies",
          "Year1 (incremental)",
          "Unknown",
        ],
        Array [
          "",
          "Year2 (incremental)",
          "Unknown",
        ],
        Array [
          "",
          "Year3 (incremental)",
          "Unknown",
        ],
        Array [
          "Year-over-year growth rate for new hypervisors",
          "",
          "Unknown",
        ],
      ]
    }
    variant="compact"
  >
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Fragment>
`;

exports[`Environment expect to render using values equal to 0 1`] = `
<Fragment>
  <Table
    aria-label="Environment"
    borders={true}
    cells={
      Array [
        "",
        "",
        "",
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "Licenses for ESXi Hypervisors (2 socket)",
          "",
          "0",
        ],
        Array [
          "VMware licenses (2 socket) to migrate to RH technologies",
          "Year1 (incremental)",
          "0",
        ],
        Array [
          "",
          "Year2 (incremental)",
          "0",
        ],
        Array [
          "",
          "Year3 (incremental)",
          "0",
        ],
        Array [
          "Year-over-year growth rate for new hypervisors",
          "",
          "0%",
        ],
      ]
    }
    variant="compact"
  >
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Fragment>
`;
